--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -7,6 +7,11 @@ on:
 jobs:
   CodeQL-Build:
     runs-on: ubuntu-latest
+    
+    strategy: 
+      fail-fast: false
+      matrix: 
+        language: ['javascript','csharp']
 
     permissions:
       # required for all workflows
